--- a/huddle-landing-page-with-alternating-feature-blocks/index.html
+++ b/huddle-landing-page-with-alternating-feature-blocks/index.html
@@ -13,72 +13,84 @@
 
 <body>
   <header class="header">
-    <nav class="header__nav">
-      <div class="header__logo"><img src="images/logo.svg" alt="" class="header__logo-image">
+    <div class="header__container">
+      <nav class="header__nav">
+        <a href="#" class="header__logo"><img src="images/logo.svg" alt="Huddle landing page"
+            class="header__logo-image">
+        </a>
+        <div class="header__action">
+          <button type="button" class="button">Try It Free</button>
+        </div>
+      </nav>
+      <div class="header__content">
+        <div class="header__text-container">
+          <h1 class="header__title-text">Build The Community <br></br>Your Fans Will Love</h1>
+          <p class="header__subtitle-text">Huddle re-imagines the way we build communities. You have a voice, but so
+            does
+            your audience.
+            Create connections with your users as you engage in genuine discussion.</p>
+          <button type="button" class="button button--pink">Get Started For Free</button>
+        </div>
+        <img src="images/illustration-mockups.svg" alt="Main illustration - desktop and mobile version of a page"
+          aria-hidden="true" class="header__main-illustration">
       </div>
-      <div class="header__action">
-        <button class="button">Try It Free</button>
-      </div>
-    </nav>
-    <div class="header__content">
-      <div class="header__text-container">
-        <h1 class="header__title-text">Build The Community <br></br>Your Fans Will Love</h1>
-        <p class="header__subtitle-text">Huddle re-imagines the way we build communities. You have a voice, but so does
-          your audience.
-          Create connections with your users as you engage in genuine discussion.</p>
-        <button class="button button--pink">Get Started For Free</button>
-      </div>
-      <img src="images/illustration-mockups.svg" alt="" class="header__main-illustration">
     </div>
   </header>
   <main class="main">
-    <article class="article border-shape">
-      <img src="images/illustration-grow-together.svg" alt="Grow Together illustration" class="article__image">
-      <div class="article__content">
-        <h2 class="article__title">Grow Together</h2>
-        <p class="article__text">Generate meaningful discussions with your audience and build a strong, loyal community.
-          Think of the insightful conversations you miss out on with a feedback form.</p>
-      </div>
-    </article>
-    <article class="article border-shape">
-      <img src="images/illustration-flowing-conversation.svg" alt="Flowing Conversations illustration"
-        class="article__image">
-      <div class="article__content">
-        <h2 class="article__title">Flowing Conversations</h2>
-        <p class="article__text">You wouldn't paginate a conversation in real life, so why do it online? Our threads
-          have just-in-time loading for a more natural flow.</p>
-      </div>
-    </article>
-    <article class="article border-shape">
-      <img src="images/illustration-your-users.svg" alt="Your Users illustration" class="article__image">
-      <div class="article__content">
-        <h2 class="article__title">Your Users</h2>
-        <p class="article__text">It takes no time at all to integrate Huddle with your app's authentication solution.
-          This means, once signed in to your app, your users can start chatting immediately.</p>
-      </div>
-    </article>
+    <div class="main__container">
+      <article class="article border-shape">
+        <img src="images/illustration-grow-together.svg" alt="Grow Together" aria-hidden="true" class="article__image">
+        <div class="article__content">
+          <h2 class="article__title">Grow Together</h2>
+          <p class="article__text">Generate meaningful discussions with your audience and build a strong, loyal
+            community.
+            Think of the insightful conversations you miss out on with a feedback form.</p>
+        </div>
+      </article>
+      <article class="article border-shape">
+        <img src="images/illustration-flowing-conversation.svg" alt="Flowing Conversations" aria-hidden="true"
+          class="article__image">
+        <div class="article__content">
+          <h2 class="article__title">Flowing Conversations</h2>
+          <p class="article__text">You wouldn't paginate a conversation in real life, so why do it online? Our threads
+            have just-in-time loading for a more natural flow.</p>
+        </div>
+      </article>
+      <article class="article border-shape">
+        <img src="images/illustration-your-users.svg" alt="Your Users illustration" aria-hidden="true"
+          class="article__image">
+        <div class="article__content">
+          <h2 class="article__title">Your Users</h2>
+          <p class="article__text">It takes no time at all to integrate Huddle with your app's authentication solution.
+            This means, once signed in to your app, your users can start chatting immediately.</p>
+        </div>
+      </article>
+    </div>
   </main>
   <footer class="footer">
     <div class="community border-shape">
       <h2 class="community__slogan">Ready To Build Your Community?</h2>
-      <button class="button button--pink">Get Started For Free</button>
+      <button type="button" class="button button--pink">Get Started For Free</button>
     </div>
-    <div class="footer__content">
-      <img src="images/logo.svg" alt="" class="footer__logo">
-      <div class="footer__container">
+    <div class="footer__container">
+      <a href="#" class="footer__logo"><img src="images/logo.svg" alt="Huddle landing page - desktop and mobile version"
+          class="footer__logo"></a>
+      <div class="footer__content">
         <div class="contacts">
           <ul class="contacts__list">
             <li class="contacts__item">
-              <img src="images/icon-location.svg" alt="location" class="contacts__icon">
+              <img src="images/icon-location.svg" alt="location" aria-hidden="true" class="contacts__icon">
               <p class="contacts__information">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod
                 tempor
                 incididunt ut labore et dolore magna aliqua</p>
             </li>
-            <li class="contacts__item"> <img src="images/icon-phone.svg" alt="phone" class="contacts__icon">
+            <li class="contacts__item"> <img src="images/icon-phone.svg" alt="phone" aria-hidden="true"
+                class="contacts__icon">
               <p class="contacts__information">+1-543-123-4567</p>
             </li>
-            <li class="contacts__item"><img src="images/icon-email.svg" alt="email" class="contacts__icon">
+            <li class="contacts__item"><img src="images/icon-email.svg" alt="email" aria-hidden="true"
+                class="contacts__icon">
               <p class="contacts__information">example@huddle.com</p>
             </li>
           </ul>
@@ -120,13 +132,15 @@
         <div class="socials">
           <ul class="socials__list">
             <li class="socials__item">
-              <i class="fab fa-facebook-f" class="footer__social-icon"></i>
+              <a href="#" class="socials__link" aria-label="Facebook"> <i class="fab fa-facebook-f"
+                  class="footer__social-icon"></i></a>
             </li>
             <li class="socials__item">
-              <i class="fab fa-twitter" class="footer__social-icon"></i>
+              <a href="#" class="socials__link" aria-label="Twitter"></a><i class="fab fa-twitter"
+                class="footer__social-icon"></i></a>
             </li>
-            <li class="socials__item">
-              <i class="fab fa-instagram" class="footer__social-icon"></i>
+            <li class="socials__item"><a href="#" class="socials__link" aria-label="Instagram"></a>
+              <i class="fab fa-instagram" class="footer__social-icon"></i></a>
             </li>
           </ul>
         </div>
